<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/action_help"
        android:icon="@mipmap/ic_action_help"
        android:title="@string/menu_title_help"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_new"
        android:icon="@mipmap/ic_action_new"
        android:title="@string/menu_title_new"
        android:orderInCategory="97"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:icon="@mipmap/ic_action_save"
        android:title="@string/menu_title_save"
        android:orderInCategory="98"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@mipmap/ic_action_settings"
        android:title="@string/menu_title_settings"
        android:orderInCategory="99"
        app:showAsAction="always" />

</menu>