<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/device_activity_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/device_activity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_device_text_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/activity_device_edit_name" />


        <TextView
            android:id="@+id/text_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_device_text_host"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edit_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/activity_device_edit_host"
            android:text="@string/activity_device_edit_host" />

        <TextView
            android:id="@+id/text_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_device_text_port"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edit_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/activity_device_edit_port"
            android:inputType="number"
            android:text="@string/activity_device_edit_port" />

    </LinearLayout>

</ScrollView>